# RenzmcLang

./: .flake8  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  README.md  install.bat  install.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  pr-checks.yml  publish-to-pypi.yml  test_enhanced.yml
docs/: advanced-features.md  builtin-functions.md  examples.md  http-client-guide.md  installation.md  jit-compiler.md  python-integration.md  quick-reference.md  repl-guide.md  standard-library.md  syntax-basics.md  type-system.md
docs/builtin_functions/: dict_functions.md  list_functions.md  string_functions.md  system_functions.md  type_functions.md
docs/standard_library/: datetime.md  fileio.md  http.md  json.md  math.md  statistics.md
examples/: jit_complete_advanced.rmc  test_jit_compilation.rmc
examples/advanced_features/: 02_async_await.rmc
examples/algorithms/: 01_binary_search.rmc
examples/builtin_functions/: 04_file_path_operations_simple.rmc
examples/dasar/: 01_hello_world.rmc  03_cek_bilangan.rmc
examples/data_structures/: 01_stack.rmc  02_queue.rmc  03_tuple_operations.rmc
examples/database/: 02_sqlite_advanced.rmc
examples/datetime_operations/: 01_datetime_basics.rmc
examples/http_client/: 01_http_get_basic.rmc  02_http_post_put_delete.rmc  03_http_advanced.rmc  test_http.rmc  test_section3.rmc
examples/jit_examples/: README.md  jit_demo.rmc  (+6 more)
renzmc/: __init__.py  __main__.py  repl.py  version.py
renzmc/rust/: Cargo.toml  __init__.py
renzmc/rust/src/: bytecode.rs  compiler.rs  lib.rs  value.rs  vm.rs
(+114 files in other folders)
